--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,33 @@
-#donate {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-}
 img {
-    size: 200px;
+    display: block;
+    height: 200px;
+    width: auto;
+    overflow: hidden;
+    max-width: 100%;
+}
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center
+  }
+  .image {
+    flex-basis: 40%
+  }
+  
+  .text {
+    font-size: 20px;
+    background-color: wheat;
+    max-width: 60%;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  body {background-image: url("images/yarn.png");
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-size: cover;}
+h1 {
+    background-color: antiquewhite;
+    text-align: center;
 }
