--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,6 @@ background-repeat: no-repeat;
 background-attachment: fixed;
 background-size: cover;}
 h1 {
-    background-color: antiquewhite;
+    background-color: wheat;
     text-align: center;
 }
